# webdav4

./: .bandit.yaml  .buildinfo  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .pyup.yml  CONTRIBUTING.md  LICENSE  README.md  contributing.html  genindex.html  index.html  mypy.ini  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py  test_requirements.txt
.doctrees/: contributing.doctree  environment.pickle  index.doctree
.doctrees/__intersphinx_cache__/: fsspec_objects.inv
.doctrees/reference/: cli.doctree  client.doctree  fsspec.doctree
.github/: dependabot.yml
.github/workflows/: ci.yml  docs-deploy.yml  main.yml  release.yml
_modules/: index.html
_modules/webdav4/: client.html  fsspec.html
_sources/: contributing.md.txt  index.md.txt
_sources/reference/: client.md.txt  fsspec.md.txt
_static/: copybutton.js
docs/: conf.py
docs/reference/: cli.md
reference/: cli.html  client.html  fsspec.html
src/webdav4/: __init__.py  _types.py  callback.py  cli.py  client.py  date_utils.py  file.py  fs.py  fs_utils.py  fsspec.py  func_utils.py  http.py  multistatus.py  propfind.py  retry.py  stream.py  types.py  urls.py  utils.py  version.py
tests/: __init__.py  __main__.py  conftest.py  server.py  test_callback.py  test_cli.py  test_client.py  test_date_parsing.py  test_fs.py  test_fs_utils.py  test_fsspec.py  test_func_utils.py  test_http.py  test_multistatus.py  test_retry.py  test_stream.py  test_urls.py  utils.py
