[metadata]
description = WebDAV client library with an fsspec-based filesystem and a CLI
name = webdav4
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
url = https://github.com/skshetry/webdav4
project_urls=
    Documentation=https://skshetry.github.io/webdav4
maintainer = Saugat Pachhai
maintainer_email = suagatchhetri@outlook.com
keywords = webdav, webdav-client, fsspec, webdav-cli
platforms=any
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
setup_requires = setuptools_scm>=6.3.1
install_requires=
    httpx==0.21.1
    python-dateutil>=2.8.1
package_dir=
    =src
packages=find:
python_requires= >=3.6

[options.extras_require]
fsspec = fsspec>=2021.7.0
http2 = httpx[http2]==0.21.1
all =
    %(fsspec)s
    %(http2)s
docs =
    Sphinx==4.3.1
    sphinx-copybutton==0.4.0
    myst-parser==0.15.2
    furo==2021.11.23
qa =
    pylint-pytest==1.1.2
    pylint==2.12.1
    mypy==0.910
    types-python-dateutil==2.8.3
    types-pkg_resources==0.1.3
tests =
    typing_extensions==4.0.0
    pytest==6.2.5
    pytest-cov==3.0.0
    cheroot==8.5.2
    WsgiDAV==3.1.1
    colorama==0.4.4
dev =
    %(all)s
    %(qa)s
    %(tests)s
    %(docs)s

[options.packages.find]
where=src

[flake8]
docstring-convention=google
max_line_length=79
max-complexity = 7
show_source=true
count=true
ignore=
    E203, # Whitespace before ':'
    W503, # Line break occurred before a binary operator


[options.entry_points]
console_scripts =
    dav = webdav4.cli:main [fsspec]
